Fix: Add overflow: hidden to .body-container.two
While I managed to prevent image element overflow in my last step, there
was a slight overflow issue at the extreme end of zooming in. Added
overflow: hidden to the .body-container-two selector and successfully
fixed the issue.

--- a/styles.css
+++ b/styles.css
@@ -159,6 +159,7 @@ h1 {
     padding-right: 250px;
     padding-top: 125px;
     padding-bottom: 125px;
+    overflow: hidden;
 }
 
 .body-text-one {
